Изменен конфигурационный файл

--- a/DatabaseSizeApplication/App.config
+++ b/DatabaseSizeApplication/App.config
@@ -5,7 +5,7 @@
    </configSections>
   <connectionStrings>
     <add name="mainConnection"
-         connectionString="Host=localhost; Username=postgres; Password=qwerty; Database=first_database"
+         connectionString="Host=localhost; Username=postgres; Password=qwerty;"
          providerName="Npgsql"/>
   </connectionStrings>
   <appSettings>
